# ddns-rs

./: Cargo.toml  MIGRATION.md  README.md  ddns.service  rustfmt.toml  sample_config.yml
.github/workflows/: ci.yml
src/: config.rs  error.rs  ip_source.rs  main.rs  service.rs
src/provider/: cloudflare.rs
